--- a/index.html
+++ b/index.html
@@ -36,7 +36,29 @@
         </form>
         <iframe src="" frameborder="0">Hello world!</iframe>
     </section>
-    <section id="sec3"></section>
+    <section id="sec3">
+        <!-- <h2>גלריה</h2> -->
+        <div class="gallery-video">
+            <video controls poster="Pic/1p.jpg">
+                <source src="Pic/v1.mp4" type="video/mp4">
+                הדפדפן שלך אינו תומך בניגון וידאו.
+            </video>
+        </div>
+        <div class="gallery">
+            <img src="Pic/1p.jpg" alt="תמונה 1">
+            <img src="Pic/p2.jpg" alt="תמונה 2">
+            <img src="Pic/p3.jpg" alt="תמונה 3">
+            <img src="Pic/p4.jpg" alt="תמונה 4">
+            <img src="Pic/p5.jpg" alt="תמונה 5">
+            <img src="Pic/p6.jpg" alt="תמונה 6">
+            <img src="Pic/p7.jpg" alt="תמונה 7">
+            <img src="Pic/p8.jpg" alt="תמונה 8">
+            <img src="Pic/p9.jpg" alt="תמונה 9">
+            <img src="Pic/p10.jpg" alt="תמונה 10">
+            <img src="Pic/p11.jpg" alt="תמונה 11">
+            <img src="Pic/p12.jpg" alt="תמונה 12">
+        </div>
+    </section>
     
     <script src="app.js"></script>
 </body>
