Refactor payment integration: streamline iframe communication and enhance payment handling logic

--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
         </div>
     </section>
     
+    <script src="nedarim.js"></script>
     <script src="app.js"></script>
 </body>
 </html>
