--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <label for="last-name" data-translate="form_last_name">שם משפחה:</label>
             <input type="text" id="last-name" name="last-name" >
             <label for="id-number" data-translate="form_id_number">מס' זהות:  *</label>
-            <input  type="text" id="id-number" name="id-number" required> >
+            <input  type="text" id="id-number" name="id-number" required> 
             <label for="email" data-translate="form_email">אימייל:  *</label>
             <input  type="email" id="email" name="email" required>
             <label for="phone" data-translate="form_phone">טלפון:  *</label>
