Implement code changes to enhance functionality and improve performance

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title data-translate="page_title">מקוה אומן</title>
+    <link rel="icon" type="image/jpeg" href="Pic/logo.jpg">
+    <link rel="shortcut icon" type="image/jpeg" href="Pic/logo.jpg">
+    <link rel="apple-touch-icon" href="Pic/logo.jpg">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -13,6 +16,7 @@
     </div>
     
     <section id="sec1">
+        <img src="Pic/logo.jpg" data-alt-translate="organization_logo_alt" alt="לוגו הארגון" class="organization-logo">
         <h1 data-translate="main_heading">רכישת כרטיסים למקוה</h1>
         <h2 data-translate="sub_heading">בנין אזמרה - אומן</h2>
         <p data-translate="main_description">אנחנו במקווה שמנו דגש על הכל, כולל הפרטים הקטנים; מים חמים, בור קר וחם, מגבות ושמפו לכל אחד - לכל ימי ראש השנה. לא יתאפשר רק לכמות מצומצמת של אנשים, אצלינו כל לקוח הוא VIP, עושים הכל על מנת שתוכלו לטבול בהידור במקוה מפואר שהושקע במיוחד עבורכם כשאתם באים לרבינו הק' על ראש השנה.</p>
