Add info cards for pricing, opening days, and ticket collection in the mikvah page

--- a/index.html
+++ b/index.html
@@ -67,7 +67,32 @@
         <img src="Pic/logo.jpg" data-alt-translate="organization_logo_alt" alt="לוגו מקוה אומן" class="organization-logo">
         <h1 data-translate="main_heading">רכישת כרטיסים למקוה אומן לראש השנה</h1>
         <h2 data-translate="sub_heading">בנין אזמרה - אומן, אוקראינה</h2>
-        <p data-translate="main_description">אנחנו במקווה שמנו דגש על הכל, כולל הפרטים הקטנים; מים חמים, בור קר וחם, מגבות ושמפו לכל אחד - לכל ימי ראש השנה. לא יתאפשר רק לכמות מצומצמת של אנשים, אצלינו כל לקוח הוא VIP, עושים הכל על מנת שתוכלו לטבול בהידור במקוה מפואר שהושקע במיוחד עבורכם כשאתם באים לרבינו הק' על ראש השנה.</p>
+        
+        <!-- Main Description -->
+        <div class="info-section">
+            <p data-translate="mikvah_description">אנחנו במקווה שמנו דגש על הכל, כולל הפרטים הקטנים; מים חמים, בור קר וחם, מגבות ושמפו לכל אחד. הרכישה תתאפשר רק לכמות מצומצמת של אנשים, אצלינו כל לקוח הוא VIP, עושים הכל על מנת שתוכלו לטבול בהידור במקוה מפואר שהושקע במיוחד עבורכם כשאתם באים לרבינו הק' על ראש השנה.</p>
+        </div>
+
+        <!-- Info Cards Container -->
+        <div class="info-cards">
+            <!-- Pricing Card -->
+            <div class="info-card">
+                <h3 data-translate="pricing_title">💰 מחירון</h3>
+                <p data-translate="pricing_info">1-4 כרטיסים: $160 לכרטיס • 5-9 כרטיסים: $150 לכרטיס • 10+ כרטיסים: $140 לכרטיס</p>
+            </div>
+
+            <!-- Opening Days Card -->
+            <div class="info-card">
+                <h3 data-translate="opening_days_title">📅 ימי פתיחת המקוה</h3>
+                <p data-translate="opening_days_info">כל ימי ראש השנה, החל מיום רביעי ועד צום גדליה</p>
+            </div>
+
+            <!-- Ticket Collection Card -->
+            <div class="info-card">
+                <h3 data-translate="ticket_collection_title">🎫 מקום קבלת הכרטיסים</h3>
+                <p data-translate="ticket_collection_info">את הכרטיסים ניתן יהיה לקבל בלובי של בנין אזמרה</p>
+            </div>
+        </div>
         <div>
             <button id="show-photos-btn" data-translate="show_photos_btn">ראה תמונות</button>
             <button id="purchase-btn" data-translate="purchase_btn">אני רוצה לרכוש</button>
