--- a/index.html
+++ b/index.html
@@ -77,19 +77,25 @@
         <div class="info-cards">
             <!-- Pricing Card -->
             <div class="info-card">
-                <h3 data-translate="pricing_title">💰 מחירון</h3>
-                <p data-translate="pricing_info">1-4 כרטיסים: $160 לכרטיס • 5-9 כרטיסים: $150 לכרטיס • 10+ כרטיסים: $140 לכרטיס</p>
+                <h3 data-translate="pricing_title">מחירון</h3>
+                <p class="pricing-info">
+                    <span class="price-item" data-he="1-4 כרטיסים: $160 לכרטיס" data-en="1-4 tickets: $160 per ticket">1-4 כרטיסים: $160 לכרטיס</span>
+                    <span class="price-separator"> • </span>
+                    <span class="price-item" data-he="5-9 כרטיסים: $150 לכרטיס" data-en="5-9 tickets: $150 per ticket">5-9 כרטיסים: $150 לכרטיס</span>
+                    <span class="price-separator"> • </span>
+                    <span class="price-item" data-he="10+ כרטיסים: $140 לכרטיס" data-en="10+ tickets: $140 per ticket">10+ כרטיסים: $140 לכרטיס</span>
+                </p>
             </div>
 
             <!-- Opening Days Card -->
             <div class="info-card">
-                <h3 data-translate="opening_days_title">📅 ימי פתיחת המקוה</h3>
+                <h3 data-translate="opening_days_title">ימי פתיחת המקוה</h3>
                 <p data-translate="opening_days_info">כל ימי ראש השנה, החל מיום רביעי ועד צום גדליה</p>
             </div>
 
             <!-- Ticket Collection Card -->
             <div class="info-card">
-                <h3 data-translate="ticket_collection_title">🎫 מקום קבלת הכרטיסים</h3>
+                <h3 data-translate="ticket_collection_title">מקום קבלת הכרטיסים</h3>
                 <p data-translate="ticket_collection_info">את הכרטיסים ניתן יהיה לקבל בלובי של בנין אזמרה</p>
             </div>
         </div>
