--- a/index.html
+++ b/index.html
@@ -122,6 +122,10 @@
            
             <label for="total-amount" data-translate="form_total_amount">סה"כ לתשלום:</label>
             <input readonly type="text" id="total-amount" name="total-amount" value="160 $" >
+
+            <a id="cuponLink" data-translate="i_have_cupon">יש לי קופון</a>
+            <label class="cupon" for="cupon-code" data-translate="enter_cupon">הזן קוד קופון</label>
+            <input class="cupon" type="text" id="cupon-code" name="cupon-code">
             
             <!-- Payment iframe will appear here after form submission -->
             <div id="payment-container" style="display: none;">
