--- a/index.html
+++ b/index.html
@@ -106,6 +106,8 @@
     </section>
 
     <section id="sec2">
+        <!-- הערה שאחרי הרכישה נשלח מייל, לבדוק בתיקיית הספאם -->
+           <h3 id="purchase-note" data-translate="purchase_note">לאחר הרכישה יישלח מייל עם כל הפרטים, יש לבדוק את תיקיית הספאם.</h3>
         <form>
             <label for="name" data-translate="form_first_name">שם פרטי:</label>
             <input type="text" id="name" name="name" >
